--- a/Finnish/main/XiaomiServiceFramework.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/XiaomiServiceFramework.apk/res/values-fi-rFI/strings.xml
@@ -8,6 +8,8 @@ Laitteen ID täytyy olla pätevä IMEI-koodi tai MAC-osoite. Ilman laitteen id:t
   <string name="explain_send_sms_permission_button">Vahvista</string>
   <string name="explain_send_sms_permission_msg">Ottaaksesi %s käyttöön, Xiaomi Service Framework lähettää tekstiviestin vahvistaakseen puhelinnumerosi. Operaattorisi veloittaa sinua normaalista tekstiviestistä.</string>
   <string name="explain_send_sms_permission_title">Vahvista puhelinnumerosi</string>
+  <string name="pop_up_allow_notify_dialog">Salli</string>
+  <string name="pop_up_deny_notify_dialog">Kiellä</string>
   <string name="sync_notification_title_format">Synkronoidaan kohdetta: %1$s</string>
   <string name="xiaomi_cloud_service">Mi Pilvi</string>
   <string name="xmsf_activate_info">XMSF aktivointitieto</string>
